Do PHP ao Laravel: Explorando o index.php do Zero - Aula 02

--- a/src/composer.json
+++ b/src/composer.json
@@ -1,15 +1,22 @@
 {
-    "name": "safeno/do-ph-pao-laravel",
-    "require-dev": {
-        "symfony/var-dumper": "^8.0"
-    },
-    "authors": [
-        {
-            "name": "Lucas Safeno",
-            "email": "lugnorio@gmail.com"
-        }
-    ],
-    "require": {
-        "fakerphp/faker": "^1.24"
+  "name": "safeno/do-ph-pao-laravel",
+  "require-dev": {
+    "symfony/var-dumper": "^8.0",
+    "fakerphp/faker": "^1.24"
+  },
+  "autoload": {
+    "psr-4": {
+      "app\\": "app/",
+      "core\\": "core/"
     }
+  },
+  "authors": [
+    {
+      "name": "Lucas Safeno",
+      "email": "lugnorio@gmail.com"
+    }
+  ],
+  "require": {
+    "vlucas/phpdotenv": "^5.6"
+  }
 }
