--- a/src/composer.json
+++ b/src/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "safeno/do-ph-pao-laravel",
   "require-dev": {
-    "symfony/var-dumper": "^8.0",
+    "symfony/var-dumper": "^7.0",
     "fakerphp/faker": "^1.24"
   },
   "autoload": {
@@ -21,6 +21,8 @@
     }
   ],
   "require": {
-    "vlucas/phpdotenv": "^5.6"
+    "vlucas/phpdotenv": "^5.6",
+    "spatie/ignition": "^1.15",
+    "php-di/php-di": "^7.1"
   }
 }
