--- a/src/composer.json
+++ b/src/composer.json
@@ -23,6 +23,7 @@
   "require": {
     "vlucas/phpdotenv": "^5.6",
     "spatie/ignition": "^1.15",
-    "php-di/php-di": "^7.1"
+    "php-di/php-di": "^7.1",
+    "league/plates": "^3.6"
   }
 }
