--- a/src/composer.json
+++ b/src/composer.json
@@ -24,6 +24,9 @@
     "vlucas/phpdotenv": "^5.6",
     "spatie/ignition": "^1.15",
     "php-di/php-di": "^7.1",
-    "league/plates": "^3.6"
+    "league/plates": "^3.6",
+    "nette/utils": "^4.1",
+    "smarty/smarty": "^5.7",
+    "twig/twig": "^3.0"
   }
 }
